--- a/README
+++ b/README
@@ -1,117 +1,71 @@
-README
+# README
 
-HW4: arith
 Date: 10/24/23
 
-PROGRAMMERS: 
-        Ayah Harper and Nana Adjekum
+## PROGRAMMERS: 
+Ayah Harper and Nana Adjekum
 
-ARCHITECHTURE:
-main function files:
-        40image.c:
-                The main function in charge of taking
-                in client prompts. Will then call compress40
-                if said prompts are valid with the way we
-                have implemented the program.
+## PROGRAM PURPOSE:
+Arith is a lossy image compression and decompression program. It takes a PPM image file as input for compression and outputs a compressed binary file. For decompression, it accepts the compressed binary file and reconstructs a PPM image, which may have slight quality loss compared to the original. The compression process involves reading and converting RGB values, transforming to chroma-averaged values, packing into codewords, and writing compressed data; decompression performs these steps in reverse order to reconstruct the image.
 
-                The function also stores if the client
-                wants to call the decompression or
-                compression steps and calls compress40
-                accordingly. 
-        compress40.c:
-                The implementation for the steps for decompression
-                and compression. Calls each step according to user 
-                input.
+## FILE ARCHITECTURE:
+The program is structured into several components, each handling specific aspects of the compression and decompression process. Here's an overview of the file structure and their purposes:
 
-compression files:
-        readandconvert.h:
-                    The interface for the readandconvert implementation.
-        readandconvert.c:
-                The implementation of the first 3 steps of compression.
-                In this file/step of compression we are reading
-                in the pixmap. converting the values
-                of the pixels from unsigned to floats, and converting
-                those values to component values colourspaces.
+### Main Function Files:
+- **40image.c**: 
+  - Main entry point for the program.
+  - Handles client prompts and validates input.
+  - Calls `compress40` with appropriate arguments for compression or decompression.
 
-                In this step we utilise the UArray2b interface/implementation
-                to store the converted values and use the mapping 
-                function with our created apply functions to populate
-                the arrays and allocate space in the correct spots.40image
-        transform.h:
-                    The interface for the transform implementation.
-        transform.c:
-                The implementation for the next 2 steps of compression.
-                In this file/step of compression we take in the 2d blocked
-                array we created in the first step and compress those values
-                into a regular 2d array. We convert the component video
-                values into the codewords needed for the bitpacking step.
-                We utilise the UArray2b, UArray2, and a regular array to
-                accomplish this step. We store the values of the codewords
-                a,b,c,d,pr,pb into a UArray2 and pass it to the next step.
-        writecodewords.h:
-                    The interface for the writecodewords implementation.
-        writecodewords.c:
-                The implementation for the last steps of compression.
-                In this file/step of compression we take in the 
-                codewords array  and pack each of those values into
-                a 32-bit word.
-                We utilise our bitpack implementation in this step
-                as well as UArray2. We use bitpack to process and
-                pack the words and UArray2 to store the words for
-                each compressed pixel.
-decompression files:
-        readcodewords.h:
-                   The interface for the readcodewords implementation.
-        readcodewords.c:
-                The implementation for the first step of decompression.
-                In this file/step we take in the compressed ppm and
-                grab the 32-bit codewords and store them into a UArray2.
+- **compress40.c**: 
+  - Implements the main steps for both compression and decompression.
+  - Orchestrates the calling of individual steps based on user input.
 
-                We utilise our bitpack implementation and the UArray2
-                implementation in this step. We get each codeword field
-                a,b,c,d,pb,pr with the bitpack implementation and store
-                the values in our codewords array.
-        detransform.h:
-                The interface for the detransform implementation.
-        detransform.c:
-                The implementation for the next 2 steps of 
-                decompression. In this file/step we take in
-                the UArray we created in the previous step/file
-                and apply conversions so we are able to get
-                back a UArray2b of component video floats.
+### Compression Files:
+- **readandconvert.c** (interface: readandconvert.h):
+  - Handles the first 3 steps of compression:
+    1. Reads the input pixmap.
+    2. Converts pixel values from unsigned to floats.
+    3. Converts float values to component video colorspace.
+  - Utilizes UArray2b for efficient storage and processing.
 
-                We utilise our UArray2 and UArray2b implementation
-                to map and populate our blocked array of these values.
-        convertandwrite.h:
-                The interface for the convertandwrite implementation.
-        convertandwrite.c:
-                The implementation for the last step of decompression.
-                In this file/step of decompression we take in the
-                blocked arrray of component video floats and convert
-                those to get the unsigned rgb values. We then write
-                these pixel values to a new ppm and print it to
-                standard output.
+- **transform.c** (interface: transform.h):
+  - Performs the next 2 steps of compression:
+    1. Compresses the 2D blocked array into a regular 2D array.
+    2. Converts component video values into codewords for bitpacking.
+  - Uses UArray2b, UArray2, and standard arrays for data manipulation.
 
-                We utilise our UArray2b and the provided PNM interface
-                to map, populate the values in the right fields, and
-                to create the ppm to then print it to standard output.
-bitpacking:
-        bitpack.c: 
-                    This file defines the implementation of the bitpack.h 
-                interface, which provides functions for width-testing,
-                field-extraction and field-update on 64-bit integers.
-other:
-        structs.c:
-                This file contains the declarations for all of the structs
-                used commonly by compression and decompression files
+- **writecodewords.c** (interface: writecodewords.h):
+  - Executes the final steps of compression:
+    1. Takes codewords and packs them into 32-bit words.
+    2. Uses the custom bitpack implementation for efficient packing.
+  - Stores compressed data in a UArray2 structure.
 
-HELP RECEVIED:
-        AMAZING TA'S: Bill, Sam, Sarah who helped us with bitpacking, 
-                        Asli, other TA's too
-        Documentation: Geeks for Geeks
+### Decompression Files:
+- **readcodewords.c** (interface: readcodewords.h):
+  - Initiates the decompression process:
+    1. Reads 32-bit codewords from the compressed PPM.
+    2. Extracts individual fields (a, b, c, d, pb, pr) using bitpack.
+  - Stores extracted values in a UArray2.
 
-HOURS ANALYZING: 
-        20 HOURS
+- **detransform.c** (interface: detransform.h):
+  - Handles the next 2 steps of decompression:
+    1. Converts codewords back into component video values.
+    2. Populates a UArray2b with the resulting float values.
 
-HOURS CODING: 
-        40 HOURS
+- **convertandwrite.c** (interface: convertandwrite.h):
+  - Completes the decompression process:
+    1. Converts component video floats back to RGB values.
+    2. Writes the decompressed pixel data to a new PPM file.
+  - Utilizes UArray2b for data handling and PNM interface for file output.
+
+### Bitpacking:
+- **bitpack.c**:
+  - Implements the bitpack.h interface.
+  - Provides functions for width-testing, field-extraction, and field-update on 64-bit integers.
+
+### Other:
+- **structs.c**:
+  - Contains declarations for common structures used in both compression and decompression processes.
+
+This architecture allows for a modular approach to image compression and decompression, with each component handling a specific part of the process.
